--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
     <title>Contact</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
+
+
+    <a href="index.html">Hkkkkkkkkkkkkkkome</a>
     <a href="about.html">About</a>
     <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
