--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
     <title>About</title>
 </head>
 <body>
-    
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
 </body>
 </html>
