--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,10 @@
     <title>Contact</title>
 </head>
 <body>
-
-
-    <a href="index.html">Hkkkkkkkkkkkkkkome</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
+
 </body>
 </html>
