--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="products.html">Products</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html">Contact again</a>
 </body>
 </html>
