Commit senaste att arbeta med

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <a href="about.html">About</a>
     <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
+    <h1>Contact</h1>
 
 </body>
 </html>
