--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
     <title>Munamii bakery</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="products.html">Products</a>
-    <a href="contact.html">Contact again</a>
+    <div class="container">
+        <div class="nav-rapper">
+            <div class="left-side">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="products.html">Products</a>
+            <a href="contact.html">Contact</a>
+            </div>
+            <div class="right-side"><img src="https://d2j6dbq0eux0bg.cloudfront.net/images/16830190/1498589015.jpg" height="100px" alt="Ikon"></div>
+        </div>
+
+        
+        
+        </div>
+        </div>
+ </div>
+    <h1>Home</h1>
 </body>
 </html>
