--- a/about.html
+++ b/about.html
@@ -12,5 +12,8 @@
     <a href="about.html">About</a>
     <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
+    <h1>About</h1>
+    <p>ABOUT PAGE TEXTAt Munamii Cakery, each cake, each box of cupcakes that we make has a very special value  for  us.  We  not  only  want  to  bring  a  dessert  to  your  table  but  rather  a  unique experience for you, which will become an unforgettable memory. We have been in the pastry market for more than 8 years and now we offer 
+        you a new way to shop through our website.</p>
 </body>
 </html>
