--- a/products.html
+++ b/products.html
@@ -12,5 +12,6 @@
     <a href="about.html">About</a>
     <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
+    <h1>Products</h1>
 </body>
 </html>
