Nya saker att titta på

--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,17 @@
     <title>Contact</title>
 </head>
 <body>
+    <header>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="products.html">Products</a>
     <a href="contact.html">Contact</a>
+</header>
     <h1>Contact</h1>
+    <p>CONTACT PAGE</p> 
+    <p> Home  delivery  service:All the  city  of Stockholm (redacted)and  Malmo (redacted)with additional cost.</p>
+    <p>Place to  pick  up  order:Via  la  Costa  Avenue.  Blue  Port  gated  neighbourhood. We  will send you the GPS Location via WhatsApp.</p>
+     <p>Orders must be placed 2 days before for greater security, processing and availability.Tuesday to Saturday9 a.m. at 2 p.m.</p>
 
 </body>
 </html>
